kubeconfig/overlays/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tic-tac-toe
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: tic-tac-toe.dev.zowie.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: tic-tac-toe-backend
              servicePort: api
  tls:
    - secretName: cloudflare-tls
